# Reds_Project

REDS_reward_learning/: .flake8  .gitignore  .ruff.toml  MUJOCO_LOG.TXT  README.md  pyproject.toml  requirements.txt  setup.py
REDS_reward_learning/bpref_v2/: __init__.py
REDS_reward_learning/bpref_v2/data/: arp_furniturebench_dataset_inmemory_stream.py  arp_robot_dataset_inmemory_stream.py  augmentations.py  extract_feature_furniturebench.py  instruct.py  label_reward_furniturebench.py  metaworld_data.yaml  metaworld_dataset_generator.py
REDS_reward_learning/bpref_v2/envs/: __init__.py  core.py  from_gym.py  from_metaworld.py
REDS_reward_learning/bpref_v2/envs/wrappers/: context_window.py  episode_monitor.py
REDS_reward_learning/bpref_v2/networks/: cnn_reward_model.py  ensemble.py  flaxmodel_ops.py  lstm_reward_model.py  mlp_reward_model.py  trans_reward_model.py
REDS_reward_learning/bpref_v2/reward_learning/: train_reds.py
REDS_reward_learning/bpref_v2/reward_learning/algos/: CLIP.py  MR.py  NMR.py  PT.py  REDS.py  __init__.py  core.py
REDS_reward_learning/bpref_v2/reward_model/: clip_reward_model.py  disc_reward_model.py  drs_reward_model.py  r2r_reward_model.py  reds_reward_model.py
REDS_reward_learning/bpref_v2/scripts/: train_furniturebench.sh
REDS_reward_learning/bpref_v2/utils/: __init__.py  compute_epic.py  jax_utils.py  pkl_to_hdf5_furniturebench.py  pkl_to_hdf5_furniturebench_stack.py  reds_extract_reward.py  reds_fail_demo_predict_phase.py  reds_fail_demo_predict_phase_metaworld.py  replay2traj.py  reward_model_loader.py  utils.py
(+1100 files in other folders)
